# evo-grid

./: .gitignore  Cargo.toml
conway-life-pixels/: Cargo.toml
conway-life-pixels/src/: main.rs
evo-conway-life-pixels/: Cargo.toml
evo-conway-life-pixels/src/: main.rs
evo-grid/: Cargo.toml
evo-grid-pixels/: Cargo.toml
evo-grid-pixels/src/: main.rs
evo-grid/src/: lib.rs  world.rs
evo-substance-pixels/: Cargo.toml
evo-substance-pixels/src/: main.rs
pixels-main-support/: Cargo.toml
pixels-main-support/src/: lib.rs
pixels-problem/: Cargo.toml
pixels-problem/src/: main.rs
src/: world.rs
world-grid/: Cargo.toml
world-grid/src/: lib.rs
