[workspace]
members = ["conway-life-pixels", "evo-conway-life-pixels", "evo-grid", "evo-grid-pixels", "evo-substance-pixels", "pixels-main-support", "pixels-problem", "world-grid"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Franz Amador <franzamador@gmail.com>"]

[workspace.dependencies]
rand = "0.9"
