[package]
name = "pixels-main-support"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
log = "0.4"
pixels = "0.14"
winit = { version = "0.30", features = ["rwh_05"] }
world-grid = { path = "../world-grid" }
